tests/codegen/errors/reader/lexer-tokens/atom.reader.error.reader.lambda.param.missing.dot/reader-lambda-param-missing-dot.mon
;; TEST-ID: tests.codegen.reader-error.reader-lambda-param-missing-dot
;; TEST-TIER: regression
;; TEST-STATUS: passing-baseline-2026-06-15
;; TEST-SECTION: codegen
;; TEST-CATEGORY: 90-diagnostics
;; TEST-SUBSET: reader-errors/lexer-tokens
;; TEST-CONTEXT: monadc.context.language.codegen-branch-coverage, monadc.context.language.codegen-atom-web, monadc.context.language.reader-error-coverage
;; TEST-PURPOSE: Trigger and pin diagnostic: expected '.' or another parameter after λ parameter name
;; TEST-ATOM: atom.reader.error.reader.lambda.param.missing.dot
;; TEST-CODEGEN-ATOM: atom.reader.error.reader.lambda.param.missing.dot
;; TEST-QUALITY: diagnostic-branch-regression
;; TEST-EXPECT: fail:compile
;; TEST-READER-ERROR: expected '.' or another parameter after λ parameter name
;; TEST-READER-PATH: reader.c:1763 lexer.lambda
;; TEST-CODEGEN-PATH: diagnostic.lexer.lambda
;; TEST-TAG: fail
;; TEST-TAG: diagnostic
;; TEST-TAG: reader
;; TEST-COVERAGE: reader.c:1763 expected '.' or another parameter after λ parameter name
;; TEST-USES-ATOM: atom.reader.error.reader.lambda.param.missing.dot
;; TEST-USES-ATOM: atom.codegen.category.90.diagnostics
;; TEST-USES-ATOM: atom.reader.error
;; TEST-USES-ATOM: atom.reader.error.family.lexer.lambda
;; TEST-REFINES: atom.codegen.category.90.diagnostics
;; TEST-REFINES: atom.reader.error
;; TEST-MENU: errors/reader/lexer-tokens/atom.reader.error.reader.lambda.param.missing.dot
;; TEST-MENU-PATH: codegen/errors/reader/lexer-tokens/atom.reader.error.reader.lambda.param.missing.dot
;; TEST-ATOM-LEAF: atom.reader.error.reader.lambda.param.missing.dot
;; TEST-CLI-TARGET: codegen errors reader lexer-tokens

(module Main)
(show λx 123)
